# maclincomms

./: Cargo.toml  LICENSE  README.md
maclincomms-client/: Cargo.toml
maclincomms-client/src/: endpoints.rs  event_model.rs  login_user.rs  main.rs  persistent_login.rs  register_user.rs  screen_inputs.rs  screens_model.rs  tui_main.rs  user_model.rs
maclincomms-client/src/crypto/: decrypt_msg.rs  dm_keys.rs  encrypt_msg.rs  identity_pair.rs  mod.rs  room_keys.rs  signature_keypair.rs
maclincomms-client/src/network_jobs/: accept_user.rs  acceptuser_thread.rs  add_user.rs  adduser_thread.rs  authN_user.rs  block_user.rs  blockuser_thread.rs  create_room.rs  get_dm_chats.rs  get_dms.rs  get_roomdata.rs  getdmchats_thread.rs  getdms_thread.rs  join_room.rs  joinroom_thread.rs  login_thread.rs  mod.rs  queued_notifications.rs  realtime_notifications.rs  register_thread.rs  request_token.rs  roomcreation_thread.rs  unblock_user.rs  unblockuser_thread.rs  upload_dm_chats.rs
maclincomms-client/src/tui_widgets/: adduser_panel.rs  adduser_textarea.rs  blockuser_panel.rs  blockuser_textarea.rs  chatoptions_panel.rs  dmchat_panel.rs  dmuser_panel.rs  joinroom_panel.rs  joinroom_textarea.rs  login_menu.rs  login_screen.rs  login_textarea.rs  mod.rs  notifications_panel.rs  publicchat_panel.rs  register_screen.rs  register_textarea.rs  roomchat_panel.rs  roomcreate_panel.rs  roomcreation_textarea.rs  splash_screen.rs
maclincomms-client/src/websockets/: mod.rs  receive_mesg.rs  send_mesg.rs  websocket_thread.rs
maclincomms-server/: .gitignore  Cargo.toml
maclincomms-server/src/: main.rs  secret_store.rs
maclincomms-server/src/core/: decoding_header.rs  encoding_token.rs  hashing_data.rs  mod.rs
maclincomms-server/src/database/: auth_db.rs  dms_db.rs  mod.rs  redis_db.rs  rooms_db.rs
maclincomms-server/src/middleware/: mod.rs  protect_routes.rs
maclincomms-server/src/models/: ack_model.rs  dms_data.rs  jwt_models.rs  login_model.rs  mod.rs  (+6 more)
(+7 files in other folders)
