[package]
name = "maclincomms"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
futures-util = "0.3.31"
tokio = { version = "1.41.1", features = ["full"]}
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"]}
url = "2.5.3"
serde = {version = "^1.0.197", features = ["derive"]}
rpassword = "7.3.1"
serde_json = "1.0.133"