[package]
name = "maclincomms"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "stream"] }
futures-util = "0.3.31"
tokio = { version = "1.41.1", features = ["full"]}
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"]}
url = "2.5.3"
serde = {version = "^1.0.197", features = ["derive"]}
rpassword = "7.3.1"
serde_json = "1.0.133"
ratatui = "0.29.0"
crossterm = "0.28.1"
tui-big-text = "0.7.1"
tui-menu = "0.3.0"
throbber-widgets-tui = "0.8.0"
tui-textarea = "0.7.0"
regex = "1.11.1"
tui-scrollview = "0.5.1"
chrono = "0.4.40"
disk-persist = "0.1.0"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
rand_core = "^0.6"
base64 = "0.22.1"
tokio-util = "0.7.14"
aes-gcm = "0.10.3"
hkdf = "0.12.4"
sha2 = "0.10.9"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }

