[package]
name = "maclincoms_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = {version = "^1.0.197", features = ["derive"]}
ring = "0.17.8"
rand = "0.8.5"
base64 = "0.22.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.133"
jsonwebtoken = "9.3.0"
dotenvy = "0.15.7"
chrono = "0.4.38"
actix-ws = "0.3.0"
futures-util = "0.3.31"
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
shuttle-actix-web = "0.49"
shuttle-runtime = "0.49"
tokio = "1.41.1"